Fixed issue with icons overlapping the nav-bar by changing header's z-index. #5

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ header {
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 1;
 }
 
 nav {
